force-app/src/objects/fferpcore__PermissionErrorLog__c.object
<CustomObject>
    <description>Stores details of permission errors.</description>
    <fields>
        <fullName>fferpcore__LocationName__c</fullName>
        <description>The name of the object, field or custom permission where the permission error occurred.</description>
        <inlineHelpText>The name of the object, field or custom permission where the permission error occurred.</inlineHelpText>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LocationType__c</fullName>
        <description>Indicates whether the permission error occured on an object, field or custom permission.</description>
        <inlineHelpText>Indicates whether the permission error occured on an object, field or a custom permission.</inlineHelpText>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRUD</fullName>
                    <label>Object</label>
                </value>
                <value>
                    <fullName>FLS</fullName>
                    <label>Field</label>
                </value>
                <value>
                    <fullName>CUSTOM_PERMISSION</fullName>
                    <label>Custom Permission</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__NamespacePrefix__c</fullName>
        <description>The prefix of the namespace of the package where the permission error occurred.</description>
        <inlineHelpText>The prefix of the namespace of the package where the permission error occurred.</inlineHelpText>
        <label>Namespace Prefix</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Operation__c</fullName>
        <description>The type of action that was attempted when the permission error occurred.</description>
        <inlineHelpText>The type of action that was attempted when the permission error occurred.</inlineHelpText>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREATE</fullName>
                </value>
                <value>
                    <fullName>READ</fullName>
                </value>
                <value>
                    <fullName>MODIFY</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                    <label>DELETE</label>
                </value>
                <value>
                    <fullName>UNDEL</fullName>
                    <label>UNDELETE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the user who encountered the error.</description>
        <inlineHelpText>The name of the user who encountered the error.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Permission_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Permission Error Log</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__User__c</columns>
        <columns>fferpcore__NamespacePrefix__c</columns>
        <columns>fferpcore__LocationName__c</columns>
        <columns>fferpcore__LocationType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Permission Error Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Error Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>